# pyfractalops

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/pyfractalops/: CCL.py  FractalFeatures.py  Fractals.py  ImageComposition.py  SSIM.py  Transforms.py  utils.py
tests/: test_fractals.py
