[metadata]
name = pyfractalops
version = 0.0.2
author = Daniel Barker
author_email = dcbark01@gmail.com
description = Fractal Image Compression/Feature Generation in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dcbark01/pyfractalops
project_urls =
    Bug Tracker = https://github.com/dcbark01/pyfractalops/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.13

[options.packages.find]
where = src